Malé doplnění k nástrojům.

--- a/prvnistrany.tex
+++ b/prvnistrany.tex
@@ -55,7 +55,7 @@
 {\bf \noindent Prohlášení} 
 
 \vspace{0.5cm} 
-\noindent Prohlašuji, že jsem svoji diplomovou práci vypracovala samostatně a použila jsem pouze podklady uvedené v~přiloženém seznamu.
+\noindent Prohlašuji, že jsem svoji diplomovou práci vypracovala samostatně a použil/a jsem pouze podklady uvedené v~přiloženém seznamu.
 
 \vspace{5mm}\noindent V~Praze 1.\,8.\,2021\hfill 
     \begin{tabular}{c}                              
