--- a/teorie.tex
+++ b/teorie.tex
@@ -15,5 +15,15 @@ V \LaTeX\ je k dispozici spousta balíčků maker zjednodušujících práci. Na
 
 K sazbě a typografii lze doporučit web \href{http://www.liteera.cz}{Litéra} (pro češtinu) a pro práce v angličtině pak Buttericks's Practical Typography~\cite{butterick_matthew_buttericks_nodate}.
 
-Budete-li chtít psát bez připojení k síti, budete potřebovat \LaTeX\ (třeba z~\href{https://tug.org/texlive/}{TeXlive}) a \verb?git? pro správu verzí. K~distribuované správě verzí v~\verb?git? se více dozvíte třeba v knize Scotta Chacon a Bena Strauba~\cite{chacon_pro_2014}.
+Budete-li chtít psát bez připojení k síti, budete potřebovat \LaTeX\ (třeba z~\href{https://tug.org/texlive/}{TeXlive}) pro překládání zdrojových souborů do PDF a nejspíš \verb?git? pro správu verzí. K~distribuované správě verzí v~\verb?git? se více dozvíte třeba v knize Scotta Chacona a Bena Strauba~\cite{chacon_pro_2014}.
+
+\subsection{Příprava obrázků}
+\label{sec:obrazky}
+
+Pro zpracování obrázků a ilustrací by se vám mohly hodit některé z následujících volně dostupných nástrojů, podle formy a obsahu:
+\begin{description}
+\item[Vektorové ilustrace] --- \href{https://inkscape.org/cs/}{Inkscape}
+\item[Bitmapové obrázky] --- \href{https://gimp.org/}{GIMP}
+\item[Diagramy a schémata] --- \href{https://www.yworks.com/products/yed}{yEd}
+\end{description}
 
