Opravy chyb na titulních stranách.

--- a/literatura.bib
+++ b/literatura.bib
@@ -13,7 +13,7 @@
 	title = {Butterick's Practical Typography},
 	url = {https://practicaltypography.com},
 	author = {Butterick, Matthew},
-	urldate = {18. 1. 2022},
+	urldate = {2022-01-18},
 	langid = {english},
 }
 
