--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage[pdftex,
             pdfauthor={Jméno Příjmení},
             pdftitle={Název práce},
-            pdfsubject={Diplomová práce, KDAIZ FJFI ČVUT},
+            pdfsubject={Závěrečná práce, KDAIZ FJFI ČVUT},
             pdfkeywords={},
             unicode
 ]{hyperref}
@@ -81,14 +81,16 @@
 \newcommand{\fjfi}{Fakulta jaderná a fyzikální inženýrská}
 \newcommand{\kdaiz}{Katedra dozimetrie a aplikace ionizujícího záření}
 \newcommand{\obor}{Radiologická fyzika}
+\newcommand{\typprace}{Diplomová práce}
 
 \newcommand{\nazeven}{Title in English}        
 \newcommand{\nazevcz}{Název práce v češtině}     
 \newcommand{\autor}{Bc. Jméno Příjmení}           
 \newcommand{\rok}{2020/2021}               
 \newcommand{\vedouci}{Ing. A B, Ph.D.}      
-\newcommand{\konzultantka}{Ing. X Y, Ph.D.}
-\newcommand{\pracoviste}{ODZ ÚJF AV~ČR, v.\,v.\,i., Na~Truhlářce~39/64, 180\,00 Praha~8} 
+\newcommand{\konzultant}{Ing. X Y, Ph.D.}
+\newcommand{\pracoviste}{KDAIZ FJFI ČVUT v Praze, Břehová 7, 115\,19, Praha~1} 
+\newcommand{\pracovistek}{ODZ ÚJF AV~ČR, v.\,v.\,i., Na~Truhlářce~39/64, 180\,00 Praha~8} 
 \newcommand{\klicova}{klíčová slova v češtině, oddělená čárkou}
 \newcommand{\keyword}{comma separated list of keywords in English}
      
