--- a/metody.tex
+++ b/metody.tex
@@ -1,5 +1,5 @@
 \chapter{Materiály a metody}
-\label{sec:mam}
+\label{sec:metody}
 
 \noindent Popis použitých metod a přístrojů, včetně příkladu tabulky  (\ref{tab:priklad}) a obrázku (\ref{fig:priklad}).
 
