--- a/prvnistrany.tex
+++ b/prvnistrany.tex
@@ -22,7 +22,7 @@
 %   {\LARGE \bf \nazevcz\vspace{8mm}\par  \Large \nazeven}
 
    \vspace{0mm}
-   {\Huge\textbf{DIPLOMOVÁ PRÁCE}}
+   {\Huge\textbf{\MakeUppercase{\typprace}}}
 
    \vspace{15mm}
    {\Large \textbf{\nazevcz}}
@@ -55,7 +55,7 @@
 {\bf \noindent Prohlášení} 
 
 \vspace{0.5cm} 
-\noindent Prohlašuji, že jsem svoji diplomovou práci vypracovala samostatně a použil/a jsem pouze podklady uvedené v~přiloženém seznamu.
+\noindent Prohlašuji, že jsem svoji diplomovou práci vypracoval/a samostatně a použil/a jsem pouze podklady uvedené v~přiloženém seznamu.
 
 \vspace{5mm}\noindent V~Praze 1.\,8.\,2021\hfill 
     \begin{tabular}{c}                              
@@ -73,7 +73,7 @@
 {\bf \noindent Poděkování} 
 
 \vspace{0.5cm} 
-\noindent Ráda bych poděkovala\dots
+\noindent Ráda bych poděkoval/a\dots
 
 Tento výzkum byl podpořen \dots
 
@@ -94,11 +94,11 @@ Tento výzkum byl podpořen \dots
 	
 	\textit{Obor:} \obor \\
 	
-	\textit{Druh práce:} Diplomová práce \\
+	\textit{Druh práce:} \typprace \\
 	
 	\textit{Vedoucí práce:}  \vedouci, \pracoviste \\
 	
-	\textit{Konzultant:}  \konzultantka, \pracoviste \\ 
+	\textit{Konzultant:}  \konzultant, \pracovistek \\ 
 	
 	\textit{Abstrakt:} 
 	\abstrCZ \\
