--- a/teorie.tex
+++ b/teorie.tex
@@ -13,7 +13,8 @@ Nechcete-li si nic dalšího instalovat, lze celou práci napsat v prohlížeči
 Skvělým úvodem do použití systému \LaTeX\ je kniha pana Satrapy \LaTeX\ pro pragmatiky \cite{satrapa_latex_2011}.
 V \LaTeX\ je k dispozici spousta balíčků maker zjednodušujících práci. Například nechcete-li si lámat hlavu, jak psát správně stupně Celsia,  \href{https://texdoc.org/serve/siunitx/0}{siunitx}.
 
-K sazbě a typografii lze doporučit web \href{http://www.liteera.cz}{Litéra} (pro češtinu) a pro práce v angličtině pak Buttericks's Practical Typography~\cite{butterick_matthew_buttericks_nodate}.
+K sazbě a typografii lze doporučit web \href{http://www.liteera.cz}{Litéra} (pro češtinu) a pro práce v angličtině pak Buttericks's Practical Typography~\cite{butterick_matthew_buttericks_nodate}. 
+Jazyková pravidla pro práce v češtině viz.~\cite{ijp}.
 
 Budete-li chtít psát bez připojení k síti, budete potřebovat \LaTeX\ (třeba z~\href{https://tug.org/texlive/}{TeXlive}) pro překládání zdrojových souborů do PDF a nejspíš \verb?git? pro správu verzí. K~distribuované správě verzí v~\verb?git? se více dozvíte třeba v knize Scotta Chacona a Bena Strauba~\cite{chacon_pro_2014}.
 
