Updates from Overleaf

--- a/literatura.bib
+++ b/literatura.bib
@@ -17,7 +17,7 @@
 	langid = {english},
 }
 
-@online{butterick_matthew_buttericks_nodate,
+@online{ijp,
 	title = {Internetová jazyková příručka},
 	url = {https://prirucka.ujf.cas.cz/},
 	author = {{kol. aut.}},
