Moved img to subdir and set graphicspath

--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,9 @@
             unicode
 ]{hyperref}
 \usepackage[pdftex]{graphicx}
+% Images are in img subdir of dir containing main.tex
+\graphicspath{ {./img/} }
+
 \usepackage[section]{placeins}
 \usepackage{rotating}
 \usepackage{mathrsfs}
