Updates from Overleaf

--- a/teorie.tex
+++ b/teorie.tex
@@ -6,7 +6,7 @@
 \section{Nástroje}
 \label{sec:nastroje}
 
-Forma závěrečné práce je popsaná na   \href{https://kdaiz.fjfi.cvut.cz/informace/zaverecne-rocnikove-prace/prace-rt-rf.html}{stránkách KDAIZ}.
+Forma závěrečné práce je popsaná na \href{ https://kdaiz.fjfi.cvut.cz/studium/bakalarske-studium/bakalarska-prace/}{stránkách KDAIZ}.
 
 Nechcete-li si nic dalšího instalovat, lze celou práci napsat v prohlížeči pomocí webového nástroje (viz \href{https://overleaf.com}{Overleaf}). Overleaf zároveň umí spolupracovat s nejrozšířenějšími systémy pro správu citací, viz \href{https://www.overleaf.com/blog/639-tip-of-the-week-overleaf-and-reference-managers}{Tip of the Week: Overleaf and Reference Managers}. 
 
