--- a/prvnistrany.tex
+++ b/prvnistrany.tex
@@ -118,5 +118,5 @@ Tento výzkum byl podpořen \dots
 \textit{Abstract:} 
 \abstrEN \\
 
-\textit{Key words:}  \keyword
+\textit{Keywords:}  \keywords
 }
