Updates from Overleaf

--- a/teorie.tex
+++ b/teorie.tex
@@ -1,20 +1,33 @@
 \chapter{Teoretický úvod}
 \label{sec:teorie}
 
-\noindent Stav problematiky. Protože úvod má být krátký, state-of-the-art část přijde až sem.
+\noindent Forma závěrečné práce je popsaná na \href{ https://kdaiz.fjfi.cvut.cz/studium/bakalarske-studium/bakalarska-prace/}{stránkách KDAIZ}.
+
+Stav problematiky. Protože úvod má být krátký, state-of-the-art část přijde až sem.
 
 \section{Nástroje}
 \label{sec:nastroje}
 
-Forma závěrečné práce je popsaná na \href{ https://kdaiz.fjfi.cvut.cz/studium/bakalarske-studium/bakalarska-prace/}{stránkách KDAIZ}.
+\noindent Nechcete-li si nic dalšího instalovat, lze práci psát v prohlížeči pomocí webového nástroje Overleaf --- tato šablona je dostupná přes následující odkaz; stačí si ji otevřít a přes \texttt{File/Make a copy} uložit kopii projektu do Vašeho účtu:
 
-Nechcete-li si nic dalšího instalovat, lze celou práci napsat v prohlížeči pomocí webového nástroje (viz \href{https://overleaf.com}{Overleaf}). Overleaf zároveň umí spolupracovat s nejrozšířenějšími systémy pro správu citací, viz \href{https://www.overleaf.com/blog/639-tip-of-the-week-overleaf-and-reference-managers}{Tip of the Week: Overleaf and Reference Managers}. 
+\begin{quotation}
+\href{https://www.overleaf.com/read/znrvrtjfkhbg#30e8b1}{https://www.overleaf.com/read/znrvrtjfkhbg\#30e8b1}. 
+\end{quotation}
 
-Skvělým úvodem do použití systému \LaTeX\ je kniha pana Satrapy \LaTeX\ pro pragmatiky \cite{satrapa_latex_2011}.
-V \LaTeX\ je k dispozici spousta balíčků maker zjednodušujících práci. Například nechcete-li si lámat hlavu, jak psát správně stupně Celsia,  \href{https://texdoc.org/serve/siunitx/0}{siunitx}.
+Overleaf zároveň umí spolupracovat s nejrozšířenějšími systémy pro správu citací, viz \href{https://www.overleaf.com/blog/639-tip-of-the-week-overleaf-and-reference-managers}{Tip of the Week: Overleaf and Reference Managers}. 
+
+Pokud preferujete mít vše u sebe, šablona je též k dispozici v git repozitáři na URL:
+
+\begin{quotation}
+    \href{https://github.com/vaclavstepan/kdaiz-zp-template}{https://github.com/vaclavstepan/kdaiz-zp-template}
+\end{quotation}
+
+Skvělým úvodem do použití systému \LaTeX\ je kniha pana Satrapy \LaTeX\ pro pragmatiky \cite{satrapa_latex_2011}. V \LaTeX\ je také k dispozici spousta balíčků maker zjednodušujících práci. Například nechcete-li si lámat hlavu, jak psát správně stupně Celsia,  \href{https://texdoc.org/serve/siunitx/0}{siunitx}.
 
 K sazbě a typografii lze doporučit web \href{http://www.liteera.cz}{Litéra} (pro češtinu) a pro práce v angličtině pak Buttericks's Practical Typography~\cite{butterick_matthew_buttericks_nodate}. 
 Jazyková pravidla pro práce v češtině viz.~\cite{ijp}.
+
+Pro doplnění tvrdých mezer za jednopísmenné předložky můžete využít buď programů \href{https://petr.olsak.net/ftp/olsak/vlna/}{vlna} od \href{https://petr.olsak.net/}{Petra Olšáka}, nebo např. v AucTeX pro Emacs pomocí makra \texttt{tildify}. Vlna je také součástí distribuce TeXLive.
 
 Budete-li chtít psát bez připojení k síti, budete potřebovat \LaTeX\ (třeba z~\href{https://tug.org/texlive/}{TeXlive}) pro překládání zdrojových souborů do PDF a nejspíš \verb?git? pro správu verzí. K~distribuované správě verzí v~\verb?git? se více dozvíte třeba v knize Scotta Chacona a Bena Strauba~\cite{chacon_pro_2014}.
 
