--- a/prvnistrany.tex
+++ b/prvnistrany.tex
@@ -43,27 +43,21 @@
 \thispagestyle{empty} 
 
 \noindent
-%\includepdf[pages=1]{zadani.pdf}
-%\includepdf[pages=2]{zadani.pdf}
+% Zakomentujte, až budete mít zadání
+\includepdf[pages=-]{zadani.pdf}
+
+% Odkomentujte, až budete mít zadání
+%\includepdf[pages=-]{zadani.pdf}
 
 \newpage 
 \thispagestyle{empty}  
 
-~ 
-\vfill 
+% Prohlášení je teď už taky formulář zvlášť
+\newpage
+\thispagestyle{empty}
+\includepdf[pages=-]{prohlaseni.pdf}
 
-{\bf \noindent Prohlášení} 
-
-\vspace{0.5cm} 
-\noindent Prohlašuji, že jsem svoji diplomovou práci vypracoval/a samostatně a použil/a jsem pouze podklady uvedené v~přiloženém seznamu.
-
-\vspace{5mm}\noindent V~Praze 1.\,8.\,2021\hfill 
-    \begin{tabular}{c}                              
-    ........................................\\  
-    \autor                                     
-    \end{tabular}                                  
-
-
+% ---
 \newpage
 \thispagestyle{empty}
 
