--- a/teorie.tex
+++ b/teorie.tex
@@ -3,7 +3,7 @@
 
 \noindent Forma závěrečné práce je popsaná na \href{ https://kdaiz.fjfi.cvut.cz/studium/bakalarske-studium/bakalarska-prace/}{stránkách KDAIZ}.
 
-Stav problematiky. Protože úvod má být krátký, state-of-the-art část přijde až sem.
+Teoretický úvod obsahuje stav problematiky. Protože úvod má být krátký, state-of-the-art část přijde až sem.
 
 \section{Nástroje}
 \label{sec:nastroje}
