--- a/uvod.tex
+++ b/uvod.tex
@@ -1,4 +1,5 @@
 \chapter*{Úvod}\addcontentsline{toc}{chapter}{Úvod}
+\label{sec:uvod}
 
 Ve Wordovském vzoru BP/DP prací KDAIZ se uvádí:
 \begin{quote}
