--- a/main.tex
+++ b/main.tex
@@ -3,9 +3,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc} 
 \usepackage{multirow}
-\usepackage[pdftex,
-            unicode
-]{hyperref}
+\usepackage[pdftex, unicode]{hyperref}
 \usepackage[pdftex]{graphicx}
 % Images are in img subdir of dir containing main.tex
 \graphicspath{ {./img/} }
