--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,9 @@
 \documentclass[a4paper,12pt]{report}
 \usepackage[english,czech]{babel} 
-\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc} 
 \usepackage{multirow}
-\usepackage[pdftex, unicode]{hyperref}
-\usepackage[pdftex]{graphicx}
+\usepackage[unicode]{hyperref}
+\usepackage{graphicx}
 % Images are in img subdir of dir containing main.tex
 \graphicspath{ {./img/} }
 
@@ -110,6 +109,8 @@ Short English summary of the work.
   pdfkeywords = {\keywords},
   pdfsubject = {\typprace, KDAIZ FJFI ČVUT v Praze}
 }
+
+\usepackage{xevlna}
 
 \title{\nazevcz}
 \begin{document}
