--- a/prvnistrany.tex
+++ b/prvnistrany.tex
@@ -43,16 +43,13 @@
 \thispagestyle{empty} 
 
 \noindent
-% Zakomentujte, až budete mít zadání
+% Soubor zadani bude třeba nahradit tím podepsaným
 \includepdf[pages=-]{zadani.pdf}
-
-% Odkomentujte, až budete mít zadání
-%\includepdf[pages=-]{zadani.pdf}
 
 \newpage 
 \thispagestyle{empty}  
 
-% Prohlášení je teď už taky formulář zvlášť
+% Prohlášení si vygenerujete v KOSu
 \newpage
 \thispagestyle{empty}
 \includepdf[pages=-]{prohlaseni.pdf}
