--- a/prvnistrany.tex
+++ b/prvnistrany.tex
@@ -1,5 +1,7 @@
 \thispagestyle{empty}
 
+\vspace*{-10mm}
+
 \begin{center}
     {\Large \bf \cvut\\[2mm] \fjfi\\ }
     \vspace{3mm}
@@ -13,7 +15,6 @@
 \begin{figure}[h]
 \begin{center}
 	\includegraphics[scale=1.5]{cvut.jpg}
-	% Je potřeba si stáhnout znak ČVUT a přidat ho k tomu souboru
 \end{center}
 \end{figure}
 
