--- a/main.tex
+++ b/main.tex
@@ -27,12 +27,14 @@
 \usepackage{indentfirst}
 \usepackage{caption} 
 \usepackage{booktabs}
+\usepackage{tabularx}
 \usepackage[version=4]{mhchem}
 \usepackage{mathtools}
 \captionsetup[table]{skip=10pt}
 \usepackage{calc}
 \usepackage{siunitx}
 \usepackage{listings}
+\usepackage{lipsum}
 \usepackage{pdfpages}
 \usepackage{subcaption}
 \sisetup{
@@ -46,17 +48,7 @@
 \usepackage{pdflscape}
 % \usepackage{rotating}
 
-% ToDoNotes
-%\setlength {\marginparwidth }{2cm}
-\usepackage[colorinlistoftodos]{todonotes}
-%\newcommand{\ks}[1]{\todo[color=yellow!40]{#1}}
-%\newcommand{\ksi}[1]{\todo[inline,color=yellow!40]{#1}}
-%\newcommand{\mse}[1]{\todo[color=orange!40]{#1}}
-%\newcommand{\msei}[1]{\todo[inline,color=orange!40]{#1}}
-%\newcommand{\vs}[1]{\todo[color=green!20]{#1}}
-%\newcommand{\vsi}[1]{\todo[inline,color=green!20]{#1}}
-\newcommand{\fix}[1]{\colorbox{yellow}{#1}}
-\newcommand\tab[1][0.1cm]{\hspace*{#1}}
+%\newcommand\tab[1][0.1cm]{\hspace*{#1}}
 
 \clubpenalty9996
 \widowpenalty10000
@@ -102,13 +94,10 @@
      
 \newcommand{\abstrCZ}{
 Abstrakt v češtině. Krátký textový souhrn práce bez odkazů na literaturu, bez obrázků, formátování, tabulek.
+\lipsum[1]
 } 
 
-\newcommand{\abstrEN}{
-\begin{otherlanguage}{english}%%
-Short English summary of the work.
-%%
-\end{otherlanguage}
+\newcommand{\abstrEN}{\lipsum[1]
 }
 
 % Fill the metadata
